[package]
name = "mls_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
lazy_static = "1.4.0"
openmls = "0.5.0"
openmls_basic_credential = "0.2.0"
openmls_rust_crypto = "0.2.0"
openmls_traits = "0.2.0"
ratatui = "0.26.3"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
tui-input = "0.8.0"
